--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -1,5 +1,4 @@
-@charset 'utf-8';
-
+@charset "UTF-8";
 * {
   box-sizing: border-box;
 }
@@ -7,18 +6,19 @@
 body {
   font-size: 16px;
   line-height: 1.5;
-  font-family: 'Open Sans', 'Noto Sans JP', sans-serif;
+  font-family: "Open Sans", "Noto Sans JP", sans-serif;
   font-weight: 400;
   color: #333;
   background-color: #fff;
 }
 
-h1,h2,h3 {
+h1, h2, h3 {
   margin-top: 0;
   line-height: 1.5;
   letter-spacing: 0.2em;
   text-align: center;
 }
+
 h3 {
   color: #85a7cc;
   font-size: 14px;
@@ -32,16 +32,85 @@ p {
 }
 
 address {
-  font-style: normal;/* 初期値 italic */
+  font-style: normal; /* 初期値 italic */
 }
 
 a {
   color: #666;
   text-decoration: none;
 }
-
-a:hover,
-a:focus {
+a:hover, a:focus {
   color: #000;
   text-decoration: none;
 }
+
+ul {
+  margin: 1em 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+section {
+  padding: 60px 0;
+}
+
+/* コンパイル後に残るコメント */
+.h2-title {
+  position: relative;
+  text-transform: uppercase;
+  z-index: 100;
+}
+.h2-title::before {
+  --size: 40px;
+  content: "";
+  display: block;
+  width: var(--size);
+  height: var(--size);
+  background: #a5d1ff;
+  position: absolute;
+  left: 50%;
+  margin-left: calc(var(--size) / -2);
+  transform: rotate(45deg);
+  z-index: -100;
+}
+
+.btn {
+  display: block;
+  padding: 20px 35px;
+  border-radius: 8px;
+  margin: 0 auto;
+  border: none;
+}
+.btn:hover, .btn:focus {
+  background: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+}
+.btn-reserve {
+  color: #fff;
+  background: #69f;
+}
+
+.inner {
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.test {
+  font-size: 20px;
+  color: blue;
+  background-color: yellow;
+  letter-spacing: 0.2em;
+}
+
+.txt-center {
+  text-align: center !important;
+}
+
+.txt-lead {
+  font-weight: 700;
+}/*# sourceMappingURL=style.css.map */
