--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -99,12 +99,10 @@ section {
   padding: 0 15px;
   margin: 0 auto;
 }
-
-.test {
-  font-size: 20px;
-  color: blue;
-  background-color: yellow;
-  letter-spacing: 0.2em;
+@media screen and (min-width: 768px) {
+  .inner {
+    max-width: 1200px;
+  }
 }
 
 .txt-center {
@@ -113,4 +111,90 @@ section {
 
 .txt-lead {
   font-weight: 700;
+}
+
+.sp-only {
+  display: block;
+}
+
+.pc-only {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .sp-only {
+    display: none;
+  }
+  .pc-only {
+    display: block;
+  }
+}
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  background: rgba(255, 230, 230, 0.9);
+  z-index: 200;
+}
+
+.header-logo-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.logo-area {
+  width: 200px;
+  margin: 0;
+  text-align: left;
+}
+
+.gnav-toggle {
+  position: relative;
+  margin-top: 12px;
+}
+
+.gnav-hidden {
+  display: none;
+}
+
+#gnav-open {
+  display: inline-block;
+  width: 33px;
+  height: 22px;
+  vertical-align: middle;
+  cursor: pointer;
+}
+#gnav-open span,
+#gnav-open span::before,
+#gnav-open span::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 25px;
+  border-radius: 3px;
+  background: #555;
+  display: block;
+}
+#gnav-open span::before {
+  bottom: -8px;
+}
+#gnav-open span::after {
+  bottom: -16px;
+}
+
+#gnav-close {
+  position: fixed;
+  background: #000;
+  inset: 0; /* top: 0, left: 0, right: 0, bottom: 0; */
+  z-index: 90;
+  opacity: 0;
+  display: none;
+  transition: all 0.3s ease-in-out;
+}
+
+#gnav-content {
+  overflow: auto;
 }/*# sourceMappingURL=style.css.map */
