--- a/lesson7/scss/_top.scss
+++ b/lesson7/scss/_top.scss
@@ -1,3 +1,6 @@
+@use './mixins' as m;
+@use './variables' as *;
+
 // headerスタイル
 .header {
   position: fixed;
@@ -62,13 +65,97 @@
 #gnav-close {
   position: fixed;
   background: #000;
-  inset: 0;/* top: 0, left: 0, right: 0, bottom: 0; */
-  z-index: 90;
+  // inset: 0;/* top: 0, left: 0, right: 0, bottom: 0; */
   opacity: 0;
-  display: none;
-  transition: all 0.3s ease-in-out;
+  // display: none;
+  width: 0;
+  height: 0;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition:
+    opacity .5s ease-in-out;
 }
 
 #gnav-content {
   overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 300;
+  width: 70%;
+  max-width: 300px;
+  height: 100%;
+  background: rgba(0 0 0/.8);
+  transition: .3s ease-in-out;
+  transform: translateX(-105%);
+  // translate: -105% 0;
+}
+
+#gnav-input:checked ~ #gnav-content {
+  transform: translateX(0%);
+}
+
+#gnav-input:checked ~ #gnav-close {
+  opacity: 0.5;
+  width: 100%;
+  height: 100%;
+  z-index: 90;
+}
+
+.gnav-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+  text-transform: uppercase;
+}
+
+.gnav-item {
+  border-bottom: 2px dotted #eee;
+  margin: 10px;
+  padding-bottom: 20px;
+
+  a {
+    color: #fff;
+    font-size: 12px;
+    display: block;
+    width: 200px;
+    text-align: center;
+
+    &::first-line {
+      font-size: 16px;
+      font-weight: bold;
+    }
+  }
+}
+
+// PC用ヘッダー
+@include m.mq {
+  // ロゴ
+  .logo-area {
+    width: 250px;
+  }
+
+  // ナビゲーション
+  .gnav-menu {
+    flex-direction: row;
+    padding-top: 15px;
+    margin: 0;
+
+    a {
+      color: #333;
+      width: 120px;
+
+      &:hover {
+        color: $color-primary;
+      }
+    }
+  }
+
+  .gnav-item {
+    border-bottom: none;
+    margin: 0;
+    padding: 0;
+  }
 }
