--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -272,4 +272,53 @@ section {
     margin: 0;
     padding: 0;
   }
+}
+.mv-area {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(../img/hero.jpg);
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.mv-title {
+  color: #fff;
+  margin-top: 70px;
+  text-shadow: 0 0 3px #333;
+}
+
+@media screen and (min-width: 768px) {
+  .mv-area {
+    width: 100%;
+    height: 600px;
+  }
+  .mv-title {
+    margin-top: 90px;
+  }
+}
+.info-area {
+  background-color: #85a7cc;
+}
+
+.info-txt {
+  color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .info-content {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+  .info-txt {
+    flex: 1;
+    margin-left: 30px;
+  }
+  .info-area img {
+    flex: 1;
+  }
 }/*# sourceMappingURL=style.css.map */
