--- a/lesson7/scss/_top.scss
+++ b/lesson7/scss/_top.scss
@@ -159,3 +159,58 @@
     padding: 0;
   }
 }
+
+// メインビジュアル
+.mv-area {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(../img/hero.jpg);
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.mv-title {
+  color: #fff;
+  margin-top: 70px;
+  text-shadow:
+    0 0 3px #333;
+  // x軸オフセット y軸オフセット ぼかし 色
+}
+
+@include m.mq {
+  .mv-area {
+    width: 100%;
+    height: 600px;
+  }
+
+  .mv-title {
+    margin-top: 90px;
+  }
+}
+
+// レンタルスペース紹介
+.info-area {
+  background-color: $color-primary;
+}
+.info-txt {
+  color: #fff;
+}
+
+@include m.mq {
+  .info-content {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+  .info-txt {
+    flex: 1; // flex-grow: 1;
+    margin-left: 30px;
+  }
+  .info-area img {
+    flex: 1;
+  }
+}
