--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 90px;
+}
+
 body {
   font-size: 16px;
   line-height: 1.5;
@@ -319,6 +324,91 @@ section {
     margin-left: 30px;
   }
   .info-area img {
+    width: 50%;
+  }
+}
+.service-area {
+  background-color: #fff;
+}
+
+.service-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.service-item {
+  flex: 40%;
+  text-align: center;
+  padding: 20px 20px 0;
+  margin: 5px;
+  border: 3px solid #527acc;
+  border-radius: 10px;
+}
+
+.service-item img {
+  width: 120px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .service-content {
+    flex-wrap: nowrap;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .service-item {
     flex: 1;
+  }
+}
+.plan-area {
+  background-color: #f0f0f0;
+}
+
+.plan-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.plan-item {
+  background-color: #fff;
+  margin-bottom: 30px;
+  box-shadow: 1px 1px 3px #aaa;
+}
+
+.plan-info {
+  padding: 0 15px 15px;
+}
+
+.plan-title {
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #527acc;
+}
+
+.plan-price {
+  text-align: center;
+  padding: 10px;
+  border: 2px solid #527acc;
+}
+
+.plan-list li::before {
+  content: "";
+  background: url(../img/list-marker.svg) no-repeat;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 10px 3px;
+}
+
+@media screen and (min-width: 768px) {
+  .plan-content {
+    flex-direction: row;
+  }
+  .plan-item {
+    flex: 1;
+    margin-top: 0;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }/*# sourceMappingURL=style.css.map */
