--- a/lesson7/scss/_base.scss
+++ b/lesson7/scss/_base.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 90px;
+}
+
 body {
   font-size: 16px;
   line-height: 1.5;
