--- a/lesson7/scss/_top.scss
+++ b/lesson7/scss/_top.scss
@@ -211,6 +211,97 @@
     margin-left: 30px;
   }
   .info-area img {
+    // flex: 1;
+    width: 50%;
+  }
+}
+
+// サービス
+.service-area {
+  background-color: #fff;
+}
+
+.service-content {
+  display: flex;
+  flex-wrap: wrap; // 初期値: nowrap
+}
+
+.service-item {
+  flex: 40%; // flex: 0 1 40%; or flex-basis: 40%
+  text-align: center;
+  padding: 20px 20px 0;
+  margin: 5px;
+  border: 3px solid $color-primary-dark;
+  border-radius: 10px;
+}
+
+.service-item img {
+  width: 120px;
+  margin: 0 auto;
+}
+
+@include m.mq {
+  .service-content {
+    flex-wrap: nowrap;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .service-item {
     flex: 1;
+  }
+}
+
+// プラン
+.plan-area {
+  background-color: #f0f0f0;
+}
+
+.plan-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.plan-item {
+  background-color: #fff;
+  margin-bottom: 30px;
+  box-shadow: 1px 1px 3px #aaa;
+}
+
+.plan-info {
+  padding: 0 15px 15px;
+}
+
+.plan-title {
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 2px solid $color-primary-dark;
+}
+
+.plan-price {
+  text-align: center;
+  padding: 10px;
+  border: 2px solid $color-primary-dark;
+}
+
+.plan-list li::before {
+  content: '';
+  background: url(../img/list-marker.svg) no-repeat;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 10px 3px;
+}
+
+@include m.mq {
+  .plan-content {
+    flex-direction: row;
+  }
+
+  .plan-item {
+    flex: 1;
+    margin-top: 0;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }
