--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -144,7 +144,7 @@ section {
   left: 0;
   width: 100%;
   padding: 10px;
-  background: rgba(255, 230, 230, 0.9);
+  background: rgba(255, 255, 255, 0.9);
   z-index: 200;
 }
 
@@ -410,5 +410,101 @@ section {
     margin-top: 0;
     margin-left: 15px;
     margin-right: 15px;
+  }
+}
+.access-area {
+  padding-bottom: 0;
+}
+
+.access-area img {
+  display: block;
+  max-width: 280px;
+  max-height: 280px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 10px auto 30px;
+}
+
+.access-maparea {
+  position: relative;
+  padding-top: 100%;
+  background-color: yellow;
+}
+
+.access-map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .access-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-right: 75px;
+    padding-left: 75px;
+  }
+  .access-content div {
+    padding-right: 5%;
+  }
+  .access-content img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .access-maparea {
+    padding-top: 30%;
+  }
+}
+.pagetop {
+  text-align: right;
+  padding: 15px;
+  background-color: #f0f0f0;
+}
+.pagetop a::after {
+  content: "";
+  background: url(../img/list-marker.svg);
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 0 3px 10px;
+  transform: rotate(-90deg);
+}
+
+.foot-area {
+  color: #fff;
+  text-align: center;
+  padding-top: 40px;
+  background-color: #596680;
+}
+
+.foot-logo {
+  margin: 0 auto 20px;
+}
+
+.text-phone,
+.text-phone a {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+  margin-bottom: 40px;
+}
+
+.foot-area_copy {
+  color: #ccc;
+  font-size: 12px;
+  display: inline-block;
+  width: 100%;
+  padding: 10px;
+  background-color: #333;
+}
+
+@media screen and (min-width: 768px) {
+  a[href^="tel:"] {
+    pointer-events: none;
   }
 }/*# sourceMappingURL=style.css.map */
