lesson9のメインビジュアルSPまで完了

--- a/lesson9/css/style.css
+++ b/lesson9/css/style.css
@@ -66,6 +66,8 @@ header {
   max-width: 1300px;
   margin: 0 auto;
   padding: 20px 15px 10px;
+  position: relative;
+  z-index: 100;
 }
 
 .header-button {
@@ -81,11 +83,16 @@ header {
   align-items: center;
   z-index: 1;
 }
+.header-button .icon,
+.header-button .icon::before,
+.header-button .icon::after {
+  transition: 0.3s;
+}
 .header-button .icon {
   display: block;
   width: 24px;
   height: 2px;
-  background: blue;
+  background: #eee;
   position: relative;
 }
 .header-button .icon::before,
@@ -103,6 +110,19 @@ header {
 .header-button .icon::after {
   top: 8px;
 }
+body.active .header-button .icon {
+  background: transparent;
+}
+body.active .header-button .icon::before, body.active .header-button .icon::after {
+  top: 0;
+  background: #000;
+}
+body.active .header-button .icon::before {
+  transform: rotate(45deg);
+}
+body.active .header-button .icon::after {
+  transform: rotate(-45deg);
+}
 
 .header-gnav {
   position: fixed;
@@ -114,6 +134,9 @@ header {
   background: rgba(255, 255, 255, 0.9);
   transform: translateX(105%);
   transition: 0.3s ease;
+}
+body.active .header-gnav {
+  transform: translateX(0);
 }
 .header-gnav ul {
   display: flex;
@@ -154,5 +177,38 @@ header {
   }
   .header-logo img {
     width: 360px;
+  }
+}
+.hero {
+  background: url(../img/photo-hero.jpg) no-repeat center center;
+  background-size: cover;
+  max-width: 1300px;
+  height: 420px;
+  margin: -70px auto 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  z-index: 10;
+}
+.hero h1 {
+  color: #fff;
+  font-size: 31px;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+}
+.hero p {
+  color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: bold;
+  letter-spacing: 0.01em;
+  margin-top: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    margin-top: 0;
   }
 }/*# sourceMappingURL=style.css.map */
