--- a/lesson9/scss/_base.scss
+++ b/lesson9/scss/_base.scss
@@ -19,10 +19,11 @@ h1,h2,h3,h4 {
   font-size: 20px;
   text-align: center;
   margin-bottom: 0.5em;
+  text-transform: uppercase;
 }
 
 a {
-  color: #75af57;
+  color: var(--primary-color);
   text-decoration: none;
   transition: opacity .3s;
 
