smallタグの色変更

--- a/lesson9/css/style.css
+++ b/lesson9/css/style.css
@@ -188,6 +188,9 @@ footer {
   margin: 70px 0 10px;
   text-align: center;
 }
+footer small {
+  color: purple;
+}
 
 .hero {
   background: url(../img/photo-hero.jpg) no-repeat center center;
